use message format for pluralization.

--- a/app/languages/en-us.json
+++ b/app/languages/en-us.json
@@ -1,5 +1,10 @@
 {
     "nav_language": "Language",
+
+    "ticket_found": "{NUM} {NUM, select, 0{ticket} other{tickets}} found",
+
     "search_placeholder": "Search your favorite tickets",
     "search_view_title": "This is search view page"
+
+
 }
