--- a/app/languages/en-us.json
+++ b/app/languages/en-us.json
@@ -1,10 +1,11 @@
 {
     "nav_language": "Language",
 
-    "ticket_found": "{NUM} {NUM, select, 0{ticket} other{tickets}} found",
+    "ticket_found": "{NUM} {NUM, select, 0{ticket} 1{ticket} other{tickets}} found",
 
     "search_placeholder": "Search your favorite tickets",
-    "search_view_title": "This is search view page"
+    "search_view_title": "This is search view page",
 
+    "test": "hello, {VAL}"
 
 }
