--- a/app/languages/zh-cn.json
+++ b/app/languages/zh-cn.json
@@ -1,5 +1,10 @@
 {
     "nav_language": "语言",
+
+    "ticket_found": "找到 {NUM} {NUM, select, other{票}}",
+
     "search_placeholder": "搜索你喜欢的票",
-    "search_view_title": "搜索结果页面"
+    "search_view_title": "搜索结果页面",
+
+    "test": "你好, {VAL}"
 }
