handle zero case; use plural format syntax.

--- a/app/languages/de-de.json
+++ b/app/languages/de-de.json
@@ -1,7 +1,7 @@
 {
     "nav_language": "Sprache",
 
-    "ticket_found": "{NUM} {NUM, select, 0{ticket} 1{ticket} other{tickets}} gefunden",
+    "ticket_found": "{NUM, plural, zero{# ticket} one{# ticket} other{# tickets}} gefunden",
 
     "search_placeholder": "Suchen Sie Ihre Lieblingstickets",
     "search_view_title": "Dies ist Suchseite",
