add top gener by fetch against performer api but seems doesnt work.

--- a/app/languages/en-us.json
+++ b/app/languages/en-us.json
@@ -1,5 +1,8 @@
 {
     "nav_language": "Language",
+    "nav_sports": "Sports",
+    "nav_concerts": "Concerts",
+    "nav_theater": "Theater",
 
     "ticket_found": "{NUM, plural, zero{# ticket} one{1 ticket} other{# tickets}} found",
 
